--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -142,6 +142,7 @@ allow 2602:f6f6:2:dc17::1;
 allow 2602:f915:f:3b43::1;
 allow 2602:fa86::be24:11ff:fe70:fc41;
 allow 2602:fa8a:3:a::a;
+allow 2602:fc24:10:bb36::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:18:f38f::1;
 allow 2602:fc24:19:524::1;
@@ -351,7 +352,6 @@ allow 2a01:270:9847::1;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
-allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
@@ -597,7 +597,6 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:507:c217:cfff:fe09:cd2d;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:6a41:c13:1337::107;
-allow 2a0c:9a40:861a:99e4::1;
 allow 2a0c:9a40:8860:51::aa11;
 allow 2a0c:9f00:2:12fa::1;
 allow 2a0c:e300:b:b::b;
@@ -719,17 +718,13 @@ allow 2a12:a800:2:1:45:141:215:110;
 allow 2a12:a800:2:1:45:141:215:111;
 allow 2a12:a800:2:1:45:141:215:114;
 allow 2a12:a800:2:1:45:141:215:169;
-allow 2a12:a800:2:1:45:141:215:17;
-allow 2a12:a800:2:1:45:141:215:19;
 allow 2a12:a800:2:1:45:141:215:200;
 allow 2a12:a800:2:1:45:141:215:238;
 allow 2a12:a800:2:1:45:141:215:28;
-allow 2a12:a800:2:1:45:141:215:40;
 allow 2a12:a800:2:1:45:141:215:56;
 allow 2a12:a800:2:1:45:141:215:61;
 allow 2a12:a800:2:1:45:141:215:62;
 allow 2a12:a800:2:1:45:141:215:63;
-allow 2a12:a800:2:1:45:141:215:80;
 allow 2a12:a800:2:1:45:141:215:88;
 allow 2a12:a800:2:1:45:141:215:90;
 allow 2a12:a800:2:1:45:141:215:95;
