--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -12,7 +12,6 @@ allow 103.251.167.10;
 allow 103.253.24.18;
 allow 103.28.52.93;
 allow 104.167.241.4;
-allow 104.167.242.116;
 allow 104.167.242.117;
 allow 104.167.242.118;
 allow 104.192.3.74;
@@ -161,7 +160,6 @@ allow 162.220.14.54;
 allow 162.220.14.78;
 allow 162.251.5.152;
 allow 163.172.45.102;
-allow 164.132.172.209;
 allow 165.73.242.163;
 allow 166.70.207.2;
 allow 171.25.193.131;
@@ -225,6 +223,7 @@ allow 178.218.144.51;
 allow 178.218.144.64;
 allow 178.218.144.96;
 allow 178.218.144.99;
+allow 179.35.10.212;
 allow 179.43.128.16;
 allow 179.43.134.19;
 allow 179.43.159.194;
@@ -250,6 +249,7 @@ allow 185.100.87.192;
 allow 185.100.87.250;
 allow 185.100.87.41;
 allow 185.10.16.41;
+allow 185.104.120.10;
 allow 185.104.120.30;
 allow 185.104.120.40;
 allow 185.106.102.102;
@@ -289,7 +289,6 @@ allow 185.177.238.26;
 allow 185.177.238.9;
 allow 185.183.157.214;
 allow 185.183.159.40;
-allow 185.191.204.254;
 allow 185.191.239.172;
 allow 185.193.52.180;
 allow 185.195.71.244;
@@ -476,7 +475,6 @@ allow 185.42.170.203;
 allow 185.56.171.94;
 allow 185.67.82.114;
 allow 185.82.219.109;
-allow 188.165.200.97;
 allow 188.239.191.25;
 allow 188.68.36.28;
 allow 188.68.41.191;
@@ -619,8 +617,6 @@ allow 2001:1b60:3:221:701:102:0:1;
 allow 2001:1b60:3:239:1003:103:0:1;
 allow 2001:1b60:3:239:1003:106:0:1;
 allow 200.122.181.2;
-allow 2001:41d0:1008:20d1::1;
-allow 2001:41d0:2:9161::1;
 allow 2001:41d0:304:200::3348;
 allow 2001:41d0:304:200::3ea4;
 allow 2001:41d0:304:200::9dce;
@@ -634,7 +630,6 @@ allow 2001:41d0:701:1000::5196;
 allow 2001:41d0:720:e300:25::;
 allow 2001:41d0:805:d300::2b19:1929;
 allow 2001:41d0:a:5c0::1;
-allow 2001:41d0:a:fe22::1;
 allow 2001:41d0:f00:5600::5ad6:7567;
 allow 2001:470:1:908::9001;
 allow 2001:470:1f06:2b4::2;
@@ -879,7 +874,6 @@ allow 23.137.253.27;
 allow 23.137.254.244;
 allow 23.137.255.85;
 allow 23.151.8.8;
-allow 23.155.8.104;
 allow 23.184.48.78;
 allow 23.190.216.8;
 allow 23.191.200.10;
@@ -904,9 +898,10 @@ allow 23.191.200.27;
 allow 23.191.200.28;
 allow 23.191.200.29;
 allow 23.191.200.3;
+allow 23.191.200.30;
 allow 23.191.200.31;
+allow 23.191.200.4;
 allow 23.191.200.5;
-allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
 allow 23.191.200.9;
@@ -936,7 +931,6 @@ allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c04::f03c:95ff:fe41:d42c;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2600:3c0b::f03c:95ff:fefa:bdff;
-allow 2602:2e5::104;
 allow 2602:f6f6:2:2634::1;
 allow 2602:f6f6:2:3637::1;
 allow 2602:f6f6:2:90f1::1;
@@ -1214,6 +1208,7 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:82c0::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1245,6 +1240,7 @@ allow 2a06:1700:1:108::b829:eee2;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
+allow 2a06:3000::10;
 allow 2a06:3000::30;
 allow 2a06:3000::40;
 allow 2a06:d380:0:103::62;
@@ -1405,7 +1401,6 @@ allow 2a0c:5700:3133:507:c217:cfff:fe09:cd2d;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:6a41:c13:1337::107;
 allow 2a0c:9a40:8860:51::aa11;
-allow 2a0c:9f00:2:12fa::1;
 allow 2a0c:e300:b:b::b;
 allow 2a0d:bbc7::f816:3eff:fe0b:181b;
 allow 2a0d:bbc7::f816:3eff:fe0b:58d3;
@@ -1593,12 +1588,12 @@ allow 43.160.194.14;
 allow 44.30.4.69;
 allow 45.11.59.28;
 allow 45.12.3.80;
+allow 45.128.133.242;
 allow 45.132.246.245;
 allow 45.13.225.69;
 allow 45.13.225.78;
 allow 45.133.74.53;
 allow 45.134.225.36;
-allow 45.134.48.153;
 allow 45.137.70.158;
 allow 45.137.99.16;
 allow 45.137.99.182;
@@ -1635,7 +1630,6 @@ allow 45.145.93.133;
 allow 45.148.10.111;
 allow 45.154.98.33;
 allow 45.38.20.123;
-allow 45.38.20.181;
 allow 45.58.190.74;
 allow 45.61.185.172;
 allow 45.61.188.15;
@@ -1699,9 +1693,9 @@ allow 5.181.177.130;
 allow 5.181.177.245;
 allow 51.81.222.62;
 allow 51.91.18.151;
-allow 5.196.95.34;
 allow 5.253.247.27;
 allow 5.255.100.224;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
