--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -224,6 +224,7 @@ allow 2605:e440:3::3ef;
 allow 2607:5300:201:3100::35c5;
 allow 2607:5300:203:b45b::;
 allow 2607:5300:205:200::4894;
+allow 2607:5300:210:2900::588:ab9d;
 allow 2607:f530:9002::19;
 allow 2607:fa18:3:beef:f001:c0de:feed:ba5e;
 allow 2610:150:4001:a120:216:3cff:fe4a:e2a9;
@@ -348,6 +349,7 @@ allow 2a01:270:9847::1;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
+allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
@@ -653,6 +655,7 @@ allow 2a0f:85c1:356:16a4::1;
 allow 2a0f:85c1:356:231b::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:85c1:356:5a46::1;
+allow 2a0f:85c1:356:62ed::1;
 allow 2a0f:cdc6:500:11e3::2;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
@@ -681,6 +684,7 @@ allow 2a12:a800:11:1:124:198:132:172;
 allow 2a12:a800:11:1:124:198:132:237;
 allow 2a12:a800:11:1:124:198:132:52;
 allow 2a12:a800:11:1:192:159:99:168;
+allow 2a12:a800:11:1:192:159:99:74;
 allow 2a12:a800:1:1:194:26:192:177;
 allow 2a12:a800:1:1:194:26:192:77;
 allow 2a12:a800:1:1:2:58:56:220;
